--- a/hugo.toml
+++ b/hugo.toml
@@ -20,6 +20,8 @@ home = ["HTML", "RSS", "JSON"]
 
 [markup]
   [markup.goldmark]
+    [markup.goldmark.renderer]
+	unsafe = true
     [markup.goldmark.extensions]
       [markup.goldmark.extensions.passthrough]
         enable = true
